introdução ao empacotamento com keywords utilizando kwargs

--- a/Powerfull Python - Aaron Maxwell.ipynb
+++ b/Powerfull Python - Aaron Maxwell.ipynb
@@ -3827,7 +3827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -3850,6 +3850,102 @@
    "source": [
     "Esta forma é mais concisa (menos tediosa de escrever), e mais sustentável. Conforme você se acostuma com esses conceitos, vai achar mais natural e fácil de usar no código que você escreve."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Argumentos de palavra-chave variáveis (argumentos com nome definido na chamada da função)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Até então, nós vimos somente funções com argumentos posicionais - o tipo onde você declara uma função `def foo(a, b)`:, e em seguida a chama utilizando `foo(7, 2)`. Você sabe que a=7 e b=2 dentro da função, por conta da ordem dos argumentos. Claro, Python também tem argumentos de palavra-chave:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rental_cars(size, doors=4, transmission='automatic'):\n",
+    "    \n",
+    "    template = f'Looking for a {doors}-door {size} car with {transmission} transmission'\n",
+    "    \n",
+    "    print(template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looking for a 4-door economic car with manual transmission\n"
+     ]
+    }
+   ],
+   "source": [
+    "get_rental_cars('economic', transmission='manual')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "E lembre, Python permite você chamar qualquer função somente utilizando argumentos nomeados:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bar(x, y, z):\n",
+    "    \n",
+    "    return x + y * z\n",
+    "\n",
+    "bar(z=2, y=3, x=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Estes argumentos não serão capturados pelo termo `*args`. Ao invés disso, Python provê uma sintaxe diferente - utilizando dois asteriscos ao invés de apenas um:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
